muleplapeli/src/main/resources/api/examples/errors/401.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "UNAUTHORIZED"
      level: error
      description: "Missing, invalid or expired token. To fix, you should re-authenticate the user."